test/files/neg/t0816.check
t0816.scala:5: error: case class Ctest has case ancestor Btest, but case-to-case inheritance is prohibited. To overcome this limitation, use extractors to pattern match on non-leaf nodes.
case class Ctest(override val data: String) extends Btest(data, true)
           ^
one error found
